[package]
authors = ["Corentin Henry <corentinhenry@gmail.com>"]
name = "netlink-proto"
version = "0.12.0"
edition = "2021"
rust-version = "1.75"

homepage = "https://github.com/rust-netlink/netlink-proto"
keywords = ["netlink", "linux", "async"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/rust-netlink/netlink-proto"
description = "async netlink protocol"

[dependencies]
bytes = { version = "1.0", features = ["serde"] }
log = "0.4.8"
futures = "0.3"
tokio = { version = "1.0", default-features = false, features = [
    "io-util",
    "time",
] }
netlink-packet-core.workspace = true
netlink-sys.workspace = true
thiserror = "2"

[features]
default = ["tokio_socket"]
tokio_socket = ["netlink-sys/tokio_socket"]
smol_socket = ["netlink-sys/smol_socket"]

[dev-dependencies]

env_logger = "0.8.2"
netlink-packet-route.workspace = true
netlink-packet-audit.workspace = true
anyhow = "1.0.72"
async-std = { version = "1.9.0", features = ["attributes"] }
nix = "0.26.2"
tokio = { version = "1.0.1", default-features = false, features = [
    "macros",
    "rt-multi-thread",
    "time",
] }
[[example]]
name = "dump_links"

[[example]]
name = "dump_links_async"
required-features = ["tokio_socket"]

[[example]]
name = "audit_netlink_events"
